[package]
name = "bls_rust"
version = "0.1.0"
authors = ["wenpinghou <skipjack8@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4"
blake2 = "0.6.1"
pairing = "0.14"
bellman = "0.1"
byteorder = "1.1.0"
#generic-array = "0.8.3"
